--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,3 +26,4 @@ chrono = { version = "0.4", features = ["serde"] }
 lettre = { version = "0.11", features = ["tokio1-native-tls"]}
 rand = "0.9.2"
 aes-gcm = "0.10"
+cargo-llvm-cov = "0.6.18"
