--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,3 +27,5 @@ lettre = { version = "0.11", features = ["tokio1-native-tls"]}
 rand = "0.9.2"
 aes-gcm = "0.10"
 cargo-llvm-cov = "0.6.18"
+regex = "1.11.2"
+hex = "0.4.3"
