Enhance user security by implementing email validation and updating password hashing methods; add bcrypt for password management and improve MongoDB user repository functionality.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,13 +3,21 @@
     "bson",
     "chrono",
     "creds",
+    "fakeinbox",
+    "Fdvcmxk",
+    "guerrillamail",
     "jsonwebtoken",
     "lettre",
     "Luma",
+    "mailinator",
+    "minutemail",
     "Pkcs",
     "qrcode",
     "Secur",
     "serde",
-    "thiserror"
+    "tempmail",
+    "thiserror",
+    "trashmail",
+    "yopmail"
   ]
 }
