--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ dotenv = "0.15"
 futures = "0.3"
 actix-web = "4.0"
 actix-service = "2.0"
-actix-rt = "2.0"
+actix-rt = "2.11.0"
 async-trait = "0.1.89"
 env_logger = "0.11.8"
 log = "0.4"
@@ -29,3 +29,4 @@ aes-gcm = "0.10"
 cargo-llvm-cov = "0.6.18"
 regex = "1.11.2"
 hex = "0.4.3"
+bcrypt = "0.17.1"
