--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,3 +30,8 @@ cargo-llvm-cov = "0.6.18"
 regex = "1.11.2"
 hex = "0.4.3"
 bcrypt = "0.17.1"
+tokio-test = "0.4"
+mockall = "0.13"
+serial_test = "3.2.0"
+testcontainers = "0.25"
+testcontainers-modules = { version = "0.13.0", features = ["mongo"] }
