Implement JWT Middleware for Actix Web
- Added a new JWT middleware in `src/utils/security/jwt.rs` to handle authentication using JSON Web Tokens.
- The middleware checks for the presence of an Authorization header, validates the JWT, and extracts claims.
- Implemented error handling for various JWT validation scenarios including missing headers, malformed tokens, and expired tokens.
- Created comprehensive unit tests to ensure the middleware functions correctly under various conditions.
- Updated `src/utils/security/mod.rs` to include the new JWT module.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,6 +11,8 @@
     "Luma",
     "mailinator",
     "minutemail",
+    "NOLOWERCASE",
+    "nouppercase",
     "Pkcs",
     "qrcode",
     "Secur",
